<resources>
    <string name="app_name">Training Planner</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="start_training_question">Do you want to start %1$s training?</string>
    <string name="completed">COMPLETED</string>
    <string name="skip">SKIP</string>
    <string name="reps_text">Reps: %1$d</string>
    <string name="sets_text">Sets: %1$d</string>
    <string name="play_or_pause_control_button">Play or pause control button</string>
    <string name="total_training_time">Total time: %1$s</string>
    <string name="total_burned_calories">%1$.1f cal</string>
    <string name="max_heart_rate">%1$.1f BPM</string>
    <string name="summary">Summary</string>
    <string name="no_trainings_message">Training list is empty.\nUse mobile application to create them.</string>
    <string name="loading_info">Loading...</string>
    <string name="save_statistics_failed">Saving statistics failed</string>
    <string name="exit">Exit</string>
    <string name="maximum_heart_rate_during_training">Maximum heart rate during training</string>
    <string name="total_burned_calories_description">Total burned calories</string>
    <string name="training_time">Training time</string>
    <string name="training_plan_does_not_exist">Training plan does not exist</string>
    <string name="fetching_training_plans_failed">Fetching training plans failed</string>
    <string name="unknown_value">--</string>
    <string name="ongoing_notification_status">Training session running</string>
</resources>
