<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".summary.TrainingSummaryActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        app:layout_boxedEdges="top|right|left">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/inner_layout_padding">

            <TextView
                android:id="@+id/summary_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/summary_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible"
                android:paddingHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/summary_title_tv">

                <com.lukasz.witkowski.training.planner.summary.StatisticView
                    android:id="@+id/total_time_sv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:statisticIcon="@drawable/hourglass"
                    custom:statisticIconContentDescription="@string/training_time" />

                <com.lukasz.witkowski.training.planner.summary.StatisticView
                    android:id="@+id/burned_calories_sv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:statisticIcon="@drawable/calories"
                    custom:statisticIconContentDescription="@string/total_burned_calories_description" />

                <com.lukasz.witkowski.training.planner.summary.StatisticView
                    android:id="@+id/max_heart_rate_sv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    custom:statisticIcon="@drawable/heart"
                    custom:statisticIconContentDescription="@string/maximum_heart_rate_during_training" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_statistics_pb"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/orange"
                app:layout_constraintBottom_toTopOf="@+id/exit_training_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_title_tv" />

            <Button
                android:id="@+id/exit_training_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/gray"
                android:text="@string/exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_content_layout"
                tools:layout_editor_absoluteX="3dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>
